--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8"/>
 		<title>Freightily</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 		<!-- scripts from NPM -->
 		<script src="/node_modules/jquery/dist/jquery.js"></script>
 		<script src="/node_modules/jquery-simple-timer/jquery.simple.timer.js"></script>
@@ -19,17 +20,16 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-sanitize.min.js"></script>
 		<script type="text/javascript" src="/js/i18next-1.10.1.min.js"></script>
 		<script src="/js/ng-i18next.js"></script>
-		
+
+		<!-- My Scripts -->
 		<script type="text/javascript" src="/js/loader.js"></script>
 		<script type="text/javascript" src="/js/dateTime.js"></script>
 		<script type="text/javascript" src="/js/map.js"></script>
 		
 		<!-- Main File -->
-		
 		<script src="/app/app.js"></script>	
 		
 		<!-- Services -->
-		
 		<script src="/app/shared/dataProviderService.js"></script>
 		<script src="/app/shared/ShipmentsService.js"></script>
 		<script src="/app/shared/AuctionService.js"></script>
@@ -37,7 +37,6 @@
 		<script src="/app/shared/UserAbilityService.js"></script>
 		
 		<!-- Controllers -->
-		
 		<script src="/app/shared/mainController.js"></script>
 		<script src="/app/components/Account/Login/loginController.js"></script>
 		<script src="/app/components/Account/Registration/registrationController.js"></script>
