--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<span class="icon-bar"></span>
 						</button>
 						<div class="navbar-brand">
-							<div class="header-logo">Freightily Logo</div>
+							<img src="../images/logo.svg" class="header-logo" alt="FREIGHTILY LOGO">
 						</div>
 						<div class="languages">
 							<ul>
@@ -107,11 +107,11 @@
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
 								<ul class="dropdown-menu">
-									<li><a href="#">Action</a></li>
-									<li><a href="#">Another action</a></li>
-									<li><a href="#">Something else here</a></li>
+									<li><a href="#">Item</a></li>
+									<li><a href="#">Item</a></li>
+									<li><a href="#">Item</a></li>
 									<li role="separator" class="divider"></li>
-									<li><a href="#">Separated link</a></li>
+									<li><a href="#">Separated Item</a></li>
 								</ul>
 							</li>
 							<li><a href="#" class="header-button-important">Contact</a></li>
@@ -164,9 +164,9 @@
 							<li><span class="glyphicon glyphicon-menu-right"></span><span>Obchodní podmínky</span></li>
 							<li><span class="glyphicon glyphicon-menu-right"></span><span>Možnosti platby</span></li>
 						</ul>
-						<div class="payment-gateway">
-							PAY PAL, VISA
-						</div>
+						<!--<div class="payment-gateway">-->
+							<!--PAY PAL, VISA-->
+						<!--</div>-->
 					</div>
 				</div>
 			</div>
@@ -178,6 +178,39 @@
 					<span>Vytvořilo grafické studio BOXART <- pičovina -> to já Merynátor.</span>
 				</div>
 			</div>
+			<!--<iframe src="http://walrus.gmc.net/workhours/WorkHours.aspx?month_year=201610&user=MMe" width="800" height="900">-->
+			<!--</iframe>-->
+			<script>
+//				var cheat = setInterval(function(){
+//					var d = new Date();
+//					var n = d.getTime();
+//					var hours = d.getHours();
+//					var minutes = d.getMinutes();
+//					if(true){
+//						console.log("XX");
+//						$("#MRepeater_theDataList_DayRepeater_24_theRepeater_24_TxtAddFrom").focus();
+//						$("#MRepeater_theDataList_DayRepeater_24_theRepeater_24_TxtAddFrom").click();
+//						var e = jQuery.Event("keypress");
+//						e.which = 13; //choose the one you want
+//						e.keyCode = 13;
+//						 $("#MRepeater_theDataList_DayRepeater_24_theRepeater_24_TxtAddFrom").trigger(e);
+//						//document.getElementById("MRepeater_theDataList_DayRepeater_24_theRepeater_24_TxtAddFrom").value = '1250';
+//						/*$( "#form11" ).submit();
+//						finish();*/
+//					}
+//					else{
+//						location.reload();
+//					}
+//					/*if(hours == 12 && minutes == 33){
+//						//document.getElementById("MRepeater_theDataList_DayRepeater_24_theRepeater_24_TxtAddFrom").value = '';
+//						console.log("OK");
+//					}*/
+//
+//				}, 1000);
+//				var finish = function(){
+//					clearInterval(cheat);
+//				}
+			</script>
 		</footer>
 	</body>
 </html>
