--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
 	
 	
 	<body ng-app="myApp" ng-controller="MainController">
+		<!-- Loader -->
 		<div class="loadPage">
 			<div class="loader-circle"></div>		
 		</div>
+		<!-- Messages -->
+		<div class="message"></div>
 		<header>
 			<div class="header-top">
 				<nav class="navbar navbar-default">
