--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 		<script src="/app/components/MySection/myShipmentsController.js"></script>
 		<script src="/app/components/MySection/sendersWinController.js"></script>
 
+		<!-- Directives -->
+		<script src="/app/shared/directives/detailAuctionDirective.js"></script>
+
 		<!-- Route File -->
 		<script src="/app/routes.js"></script>
 
