--- a/app/shared/directives/detailAuctionDirective.html
+++ b/app/shared/directives/detailAuctionDirective.html
@@ -1,15 +1,14 @@
 <div class="auction-detail popover bottom col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="arrow"></div>
-    <div class=" col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
         <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">Místa vyzvednutí nákladu</h2>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Odkud:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{vm.item.from.city}}, {{vm.item.from.street}}, {{vm.item.from.house_number}}, {{vm.item.from.street_number}}</span></div>
+            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdasdsa,asdsadsadsd dsad, asdasdsa, asdsa</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Kam:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{vm.item.to.city}}, {{vm.item.to.street}}, {{vm.item.to.house_number}}, {{vm.item.to.street_number}}</span></div>
+            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdasdsa,asdsadsadsd dsad, asdasdsa, asdsa</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Nahráno:</span></div>
@@ -17,40 +16,41 @@
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Konec:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{vm.item.end_auction}}</span></div>
+            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdasdasdsads asd asd as</span></div>
         </div>
     </div>
     <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
         <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">O nákladu</h2>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Popis:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{vm.item.freight_description}}</span></div>
+            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdasdas dsa dsad </span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Typ:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{vm.item.freight_type}}</span></div>
+            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asd asd sad sad sadsa dsa</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Velikost:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{vm.item.freight_size}}</span></div>
+            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsad sadas dsa das das das</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Váha:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{vm.item.freight_weight}}</span></div>
+            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdas dsad sada</span></div>
         </div>
     </div>
+    <div class="clean-line-sm col-xs-0 col-sm-12 col-md-0 col-lg-0"></div>
     <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
         <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">Aukce</h2>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Konec aukce:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{vm.item.end_auction}}</span></div>
+            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdasdsa asd sad sadsadsadas</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Minimální příhoz:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{vm.item.min_amount}}</span></div>
+            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdas dasd sa das</span></div>
         </div>
     </div>
-    </div>
+    <div class="clean-line-lg col-xs-0 col-sm-0 col-md-12 col-lg-12"></div>
     <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-6">
         <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Historie příhozů</h2>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><span>asdsa dasd sad </span></div>
