--- a/app/shared/directives/detailAuctionDirective.html
+++ b/app/shared/directives/detailAuctionDirective.html
@@ -3,51 +3,51 @@
     <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
         <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">Místa vyzvednutí nákladu</h2>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Odkud:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdasdsa,asdsadsadsd dsad, asdasdsa, asdsa</span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Odkud:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.from.city}}</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Kam:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdasdsa,asdsadsadsd dsad, asdasdsa, asdsa</span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Kam:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.to.city}}</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Nahráno:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>pičovina </span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Nahráno:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>pičovina </span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Konec:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdasdasdsads asd asd as</span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Konec:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.end_auction}}</span></div>
         </div>
     </div>
     <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
         <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">O nákladu</h2>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Popis:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdasdas dsa dsad </span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Popis:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.freight_description}}</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Typ:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asd asd sad sad sadsa dsa</span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Typ:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.freight_type}}</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Velikost:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsad sadas dsa das das das</span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Velikost:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.freight_size}}</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Váha:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdas dsad sada</span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Váha:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.freight_weight}}</span></div>
         </div>
     </div>
     <div class="clean-line-sm col-xs-0 col-sm-12 col-md-0 col-lg-0"></div>
     <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
         <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">Aukce</h2>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Konec aukce:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdasdsa asd sad sadsadsadas</span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Konec aukce:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.end_auction}}</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Minimální příhoz:</span></div>
-            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdas dasd sa das</span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Minimální příhoz:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.min_amount}}</span></div>
         </div>
     </div>
     <div class="clean-line-lg col-xs-0 col-sm-0 col-md-12 col-lg-12"></div>
@@ -58,7 +58,7 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><span>asdsa dasd sad </span></div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><span>asdsa dasd sad </span></div>
     </div>
-    <div class="auction-detail-item col-xs-12 col-sm-10 col-md-8 col-lg-6">
+    <div class="auction-detail-item auction-bid col-xs-12 col-sm-12 col-md-8 col-lg-6">
         <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Chcete přihodi?</h2>
         <div class="has-feedback has-feedback-left col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
             <select class="form-control my-input col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -68,12 +68,12 @@
             </select>
             <i class="glyphicon glyphicon-lock form-control-feedback"></i>
         </div>
-        <div class="has-feedback has-feedback-left col-xs-4 col-sm-4 col-md-4 col-lg-4">
+        <div class="has-feedback has-feedback-left col-xs-12 col-sm-4 col-md-4 col-lg-4">
             <input type="text" class="form-control my-input bid" placeholder="Přihodit"/>
             <i class="glyphicon glyphicon-lock form-control-feedback"></i>
         </div>
-        <span class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><span>18 dní 00:25:15</span></span>
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+        <span class="col-xs-12 col-sm-4 col-md-4 col-lg-4"><span>18 dní 00:25:15</span></span>
+        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
             <div class="my-button important-button"><span>PŘIHODIT</span></div>
         </div>
 
