--- a/app/shared/directives/detailAuctionDirective.html
+++ b/app/shared/directives/detailAuctionDirective.html
@@ -73,7 +73,7 @@
     <div class="clean-line-lg col-xs-0 col-sm-0 col-md-12 col-lg-12"></div>
     <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-6">
         <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Historie příhozů</h2>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-repeat="item_history in history">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 history-list" ng-repeat="item_history in history">
             <span>kolik: {{item_history.amount}} Datum: {{item_history.date}} id_uziv:{{item_history.user_img}}</span>
         </div>
     </div>
