--- a/app/shared/directives/detailAuctionDirective.html
+++ b/app/shared/directives/detailAuctionDirective.html
@@ -6,14 +6,12 @@
     <div class="auction-label col-xs-12">Freight description</div>
     <div class="auction-cell col-xs-12 col-sm-4 col-md-4 col-lg-4"><span>{{item.freight_description}}</span></div>
     <div class="auction-label col-xs-12">Price</div>
-    <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <span>{{item.price}}</span>
-        <div ng-if="vm.withFavourite" class="favouriteButton" ng-class="(isFavourite) ? 'is-favourite' : 'non-favourite'">
-            <span class="glyphicon glyphicon glyphicon-heart" ng-click="vm.favourite()"></span>
-        </div>
-    </div>
+    <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2"><span>{{item.price}}</span></div>
     <div class="auction-label col-xs-12">End auction</div>
     <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2"><span>{{item.end_auction}}</span></div>
+    <div ng-if="vm.withFavourite" class="favouriteButton" ng-class="(isFavourite) ? 'is-favourite' : 'non-favourite'">
+        <span class="glyphicon glyphicon glyphicon-star" ng-click="vm.favourite()"></span>
+    </div>
 </div>
 <div class="auction-button-detail col-xs-12 col-sm-3 col-md-3 col-lg-2">
     <div class="my-button normal-button" ng-click="vm.detail()"><span>DETAIL</span></div>    
