--- a/app/shared/directives/detailAuctionDirective.html
+++ b/app/shared/directives/detailAuctionDirective.html
@@ -107,7 +107,7 @@
             <i class="glyphicon glyphicon-lock form-control-feedback"></i>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <div class="my-button important-button" ng-click="vm.assign(driverSelect)"><span>Přiřadit</span></div>
+            <div class="my-button important-button" ng-click="vm.assigment(driverSelect)"><span>Přiřadit</span></div>
         </div>
     </div>
 </div>
