--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		<script src="/app/components/Manage/manageController.js"></script>
 		<script src="/app/components/Shipments/myShipmentsController.js"></script>
 		<script src="/app/components/Manage/ShipmentsManage/shipmentsManageController.js"></script>
+		<script src="/app/components/Manage/ViewShipments/viewShipmentsController.js"></script>
 		<script src="/app/components/MyCompany/myCompanyController.js"></script>
 		<script src="/app/components/MyCompany/AddEmployee/addEmployeeController.js"></script>
 		<script src="/app/components/MyCompany/AddVehicle/addVehicleController.js"></script>
