--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
 		<!-- Directives -->
 		<script src="/app/shared/directives/detailAuctionDirective.js"></script>
+		<script src="/app/components/Manage/ViewShipments/egFiles.js"></script>
 
 		<!-- Route File -->
 		<script src="/app/routes.js"></script>
