--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<script type="text/javascript" src="/js/shared.js"></script>
 		<script type="text/javascript" src="/js/loader.js"></script>
 		<script type="text/javascript" src="/js/map.js"></script>
+		<script type="text/javascript" src="/js/routeMap.js"></script>
 
 		<!-- Main File -->
 		<script src="/app/app.js"></script>
@@ -59,11 +60,9 @@
 		<script src="/app/components/MyCompany/AddEmployee/addEmployeeController.js"></script>
 		<script src="/app/components/MyCompany/AddVehicle/addVehicleController.js"></script>
 
-
-
-
 		<!-- Directives -->
 		<script src="/app/shared/directives/detailAuctionDirective.js"></script>
+		<script src="/app/shared/directives/detailShipmentDirective.js"></script>
 		<script src="/app/components/Manage/ViewShipments/egFiles.js"></script>
 
 		<!-- Route File -->
