--- a/app/shared/directives/detailShipmentDirective.html
+++ b/app/shared/directives/detailShipmentDirective.html
@@ -92,7 +92,7 @@
         <div class="map col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div id="map"></div>
         </div>
-        <!--<div class="my-button normal-button" ng-click="vm.checkQrCode(item.id_auction, '1.1016.1')"><span>Check QR Code</span></div>-->
-        <div class="my-button normal-button" ng-click="vm.postGPS(item.id_auction)"><span>Post GPS</span></div>
+         <!--<div class="my-button normal-button" ng-click="vm.checkQrCode(item.id_auction, '1.1018.1')"><span>Check QR Code</span></div>-->
+        <!--<div class="my-button normal-button" ng-click="vm.postGPS(item.id_auction)"><span>Post GPS</span></div> -->
     </div>
 </div>
