--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		<script type="text/javascript" src="/js/i18next-1.10.1.min.js"></script>
 		<script src="/js/ng-i18next.js"></script>
 
+		<!-- Config -->
+		<script type="text/javascript" src="/app/config.js"></script>
+
 		<!-- My Scripts -->
 		<script type="text/javascript" src="/js/shared.js"></script>
 		<script type="text/javascript" src="/js/loader.js"></script>
