Labels for forms + footer fix.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 				</div>
 			</div>
 		</header>
-		<div class="middle">
+		<div class="middle" ng-open="afterRender()">
 			<div class="content" ui-view></div>
 		</div>
 		<footer>
