--- a/app/shared/directives/detailAuctionDirective.html
+++ b/app/shared/directives/detailAuctionDirective.html
@@ -71,8 +71,38 @@
     <div class="clean-line-lg col-xs-0 col-sm-0 col-md-12 col-lg-12"></div>
     <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-6">
         <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Historie příhozů</h2>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 history-list" ng-repeat="item_history in history">
-            <span>kolik: {{item_history.amount}} Datum: {{item_history.date}} id_uziv:{{item_history.user_img}}</span>
+        <div ng-if="history.length > 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 row">
+            <div class="history-header">
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                    #
+                </div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                    Uživatel
+                </div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                    Datum
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    Příhoz
+                </div>
+            </div>
+            <div class="history-list"  ng-repeat="item_history in history">
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                    {{$index + 1}}
+                </div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                    {{item_history.user_img}}
+                </div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                    {{item_history.date}}
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    {{item_history.amount}}
+                </div>
+            </div>
+        </div>
+        <div ng-if="history.length == 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            Žádné přihozy..
         </div>
     </div>
     <div ng-if="withBids && !canAssign" class="auction-detail-item auction-bid col-xs-12 col-sm-12 col-md-8 col-lg-6">
