--- a/app/shared/directives/detailAuctionDirective.html
+++ b/app/shared/directives/detailAuctionDirective.html
@@ -90,18 +90,20 @@
                     Příhoz
                 </div>
             </div>
-            <div class="history-list row"  ng-repeat="item_history in history">
-                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                    {{$index + 1}}
-                </div>
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                    {{item_history.user_img}}
-                </div>
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                    {{item_history.date}}
-                </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    {{item_history.amount}}
+            <div class="history-list">
+                <div class="history-list-item row"  ng-repeat="item_history in history">
+                    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                        {{$index + 1}}
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                        {{item_history.user_img}}
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                        {{item_history.date}}
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                        {{item_history.amount}}
+                    </div>
                 </div>
             </div>
         </div>
@@ -146,4 +148,5 @@
             <div class="my-button important-button" ng-click="vm.assigment(driverSelect)"><span>Přiřadit</span></div>
         </div>
     </div>
+    <div class="border-fix"></div>
 </div>
